--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="font-family: 'Times New Roman', Times, serif; font-size: 12px; margin: 25px;">
 <strong>gregory cotton</strong>
 <br>
-<p>i am an engineer working at nokia, living in lisbon</p>
+<p>i am an engineer working at nokia, living in lisbon.</p>
 <p><a href="mailto:cotton.gregory@proton.me">cotton.gregory@cotton.me</a></p>
 </body>
 </html>
