Updated index.html, added style.css while listening to the new mechatok song

--- a/index.html
+++ b/index.html
@@ -1,16 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
+
+    <meta name="title" content="Gregory Cotton">
+    <meta property="og:title" content="Gregory Cotton">
+    <meta name="twitter:title" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
+    <meta name="author" content="Gregory Cotton">
+    <meta name="description"
+        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gregory Cotton</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 </head>
 
-<body style="font-family: 'Times New Roman', Times, serif; font-size: 12px; margin: 25px;">
-<strong>gregory cotton</strong>
-<br>
-<p>i am an engineer working at nokia, living in lisbon.</p>
-<p><a href="mailto:cotton.gregory@proton.me">cotton.gregory@cotton.me</a></p>
-<p>i am also working on a better version of this website, i promise :)</p>
+<body>
+    <div class="container">
+        <div class="left">
+            <h1><a href="index.html" class="home-link">Gregory Cotton</a></h1>
+        </div>
+
+        <div class="right">
+            <p>I am an automation engineer working on IT end user experience at Nokia, living in Lisbon.</p>
+
+            <br>
+
+            <p><a class="primary-link" href="mailto:cotton.gregory@proton.me">cotton.gregory@proton.me</a></p>
+
+            <br>
+
+            <p>Currently, I am:</p>
+
+            <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
+                    href="https://pair.withgoogle.com/explorables/patchscopes/">Can Large Language Models Explain Their
+                    Internal Mechanisms?</a> by Hussein, Nada, et al.</p>
+
+            <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/6tmZryIk5pXCueWH5Fm0pt?si=XwOiAQSYQ1Gx_Pt_aEL3lQ">弓长张</a> by
+                jackzebra, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/6DlLdXBGCsSDPOV8R2pCl7?si=e21rW57NSHeBdcoLq3QUHQ">Two
+                    Star
+                    & The Dream Police</a> by Mk.gee, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/57msisvMU9bweGU7ITMnvl?si=bzNAYhidRAaNe2YBJz_LlA">Trendsetter</a>
+                by
+                Lunaa
+
+            <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
+                    href="https://www.youtube.com/playlist?list=PLUl4u3cNGP61-9PEhRognw5vryrSEVLPr">MIT 8.04 Quantum
+                    Physics I</a> lecture series from Allan Adams</p>
+
+            <br>
+
+            <details>
+                <summary class="secondary-link">Last updated May 11th 2025</summary>
+                <div class="secondary-text">
+                    <br>
+                    <!-- -->
+                    <p><strong>April 14th 2025</strong></p>
+                    <p><strong>Reading</strong>: <a class="secondary-link" target="_blank"
+                            href="https://arxiv.org/pdf/2504.01990">Advances and Challenges in Foundation Agents</a> by
+                        Liu,
+                        Bang, et al.</p>
+                    <p><strong>Listening to</strong>: <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/7ikTrq7WTdtgLtphwS5S0v?si=vu1-iTPUScu3UCgplGoaEw">Grove</a>
+                        by
+                        Dion, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/60JwRRKU6wsdJex2cbq974?si=EQpHWShCQYuGSOXG17g_Rw">q
+                            p</a>
+                        by
+                        Ichiko Aoba, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/784znju28Nz5zSuRuthPcO?si=-1WY38P5TSa_PB-MqtzWkQ">F*CK
+                            U SKRILLEX</a> by Skrillex</p>
+
+                    <p><strong>Watching</strong>: The <a class="secondary-link" target="_blank"
+                            href="https://youtu.be/k2LEJb9OMNo?si=RJiBlJHAO35xfapM">Ottawa Senators</a> in the Stanely
+                        Cup playoffs</p>
+                    <br>
+
+                    <!-- -->
+                    <p><strong>January 30th 2025</strong></p>
+                    <p>Reading: <a class="secondary-link" target="_blank"
+                            href="https://mitpress.mit.edu/9780262162098/types-and-programming-languages/">Types and
+                            Programming Languages</a> by Benjamin C. Pierce</p>
+
+                    <p>Listening to: <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/31yw2qZpLSdwx4JnwbBbYw?si=fHIbLDQ0QzqR4mh7cIj8wA">litterzzz</a>
+                        by litterzzz, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/3jiS4FdWQFwnitsYQ5Gwwb?si=PeOLSmCVTKWM-CmVfx4qJQ">Just
+                            Tired 2</a> by Joeyy, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/58PwJKq5KH2MjVt2Ih4nEt?si=ab6wGPsTTDSzvJk-X6n6ww">choke
+                            enough</a> by Oklou</p>
+
+                    <p>Watching: <a class="secondary-link" target="_blank"
+                            href="https://youtube.com/playlist?list=PLK06XT3hFPzilgF1mi_hHqcXO1-o_8OEe&si=tcoFdbfQyfO6xHMA">Principles
+                            of Programming Languages</a> lecture series from Adam Doupé</p>
+
+                    <br>
+
+                    <!-- -->
+                    <p><strong>December 15th 2024</strong></p>
+                    <p>Reading: <a class="secondary-link" target="_blank"
+                            href="https://www.barnesandnoble.com/w/swanns-way-marcel-proust/1007393900">Swann’s Way</a>
+                        by Marcel Proust</p>
+
+                    <p>Listening to: <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/2cEL04tddUszYFy6tEM1rI?si=lw0e_nRrTwKp52UeN8Yawg">COLD
+                            VISIONS</a> by Bladee, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/2iS4pBIiQf4sCTJLZ5n8dy?si=JPcZgTHEQ72n8kGmb0gOeA">SMILE
+                            :D</a> by Porter Robinson, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/3J1xyysyRdiNlMMrRKsKQI?si=mOIE0X23SFaID0oCccVNmg">Brazen
+                            Child</a> by Dyltwosix</p>
+
+                    <p>Watching: <a class="secondary-link" target="_blank"
+                            href="https://youtu.be/KMlA_czMyRE?si=6J07-UL2YCH1l4Az">My Movie 2: A Christmas
+                            Movie!</a> by ANVIL</p>
+                </div>
+            </details>
+        </div>
+    </div>
 </body>
+
 </html>
