--- a/changelog.html
+++ b/changelog.html
@@ -40,13 +40,9 @@
             <p>Desired changes or additions to this site I'll get around to in my free time, someday.</p>
             <br>
             <ul style="list-style-position: inside">
-                <li>Content review on ontology pages</li>
-                <li>Code/shit cleanup</li>
-                <br>
-                <br>
                 <li>Stateful URLs for queries on tables</li>
                 <li>FTS5 for database search</li>
-                <li>Auto-generate UUIDv4 upon new record creation in SQLite DB</li>
+                <li>Better mobile view</li>
             </ul>
 
             <br>
