Database and ontology updates

--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,7 @@
             <ul style="list-style-position: inside">
                 <li>Stateful URLs for queries on tables</li>
                 <li>FTS5 for database search</li>
+                <li>Mobile responsivenes for ontology page details</li>
             </ul>
 
             <br>
