--- a/ontology/spotify-multi-disc-player.html
+++ b/ontology/spotify-multi-disc-player.html
@@ -52,7 +52,7 @@
                     work, or relax, I need to add all three to a new playlist. I don't particularly like the clutter of
                     having random playlists all over my Spotify, and further think it silly to need to create then
                     delete a playlist to imitate a function that was the default for an archaic piece of technology
-                    – so I took a day to build a web app that mimics the aforemention functionality I was missing.</p>
+                    – so I took a day to build a web app that mimics the functionality I was missing.</p>
             </div>
 
             <br>
