--- a/ontology/spotify-multi-disc-player.html
+++ b/ontology/spotify-multi-disc-player.html
@@ -53,6 +53,8 @@
                     having random playlists all over my Spotify, and further think it silly to need to create then
                     delete a playlist to imitate a function that was the default for an archaic piece of technology
                     – so I took a day to build a web app that mimics the functionality I was missing.</p>
+
+                    <p>View the <a href="https://github.com/gregorycotton/spotify-multi-disc" target="_blank" class="primary-link">repo for the multi-disc player</a>.</p>
             </div>
 
             <br>
