Index.html update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.barnesandnoble.com/w/sun-and-steel-yukio-mishima/1103738660?ean=9786159424645">Sun and Steel</a> by Yukio Mishima</p>
+                    href="https://www.barnesandnoble.com/w/within-a-budding-grove-marcel-proust/1102545295?ean=9781504065467">Within a Budding Grove</a> by Marcel Proust</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/2qwv7hNjSGfLarHY2adeq9?si=GbpiiE8qTPepty5N0ZtkcQ">14
@@ -61,14 +61,12 @@
                 by João Mortágua</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLUl4u3cNGP61-9PEhRognw5vryrSEVLPr">MIT 8.04
-                            Quantum
-                            Physics I</a> lecture series from Allan Adams</p>
+                    href="https://youtu.be/0MNVhXEX9to?si=Yxfjc147RuObEKhn">Machine Learning Meets Control Theory</a> from Steve Brunton</p>
 
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated June 27th 2025</summary>
+                <summary class="secondary-link">Last updated July 10th 2025</summary>
                 <div class="secondary-text">
                     <br>
 
