--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
                 Dominic Fike, <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/52yD51X7yDinwlg6tbCtpP?si=kxDRAOgdTX65NJVNFjzZ7A">NEVER
                     ENOUGH</a> by Turnstile, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/1u3fACOWZ2FQZhpFiDe85n?si=ElzQAgTuT3Wnt65mbS8Jeg">HOLI GEO</a>
-                by João Mortágua</p>
+                    href="https://open.spotify.com/album/5vD5M5VW62LL78Ko8x0CVZ?si=Axlsdh5LSO6M4ZJkiFNhQQ">SWAG</a>
+                by Justin Bieber</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://youtu.be/0MNVhXEX9to?si=Yxfjc147RuObEKhn">Machine Learning Meets Control Theory</a> from Steve Brunton</p>
+                    href="https://youtube.com/playlist?list=PLOROtRhtegr7DmeMyFxfKxsljAVsAn_X4&si=nzSOW66lSmZe6nVY">Algebraic Topology</a> lecture series from Anthony Bosman</p>
 
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated July 10th 2025</summary>
+                <summary class="secondary-link">Last updated July 12th 2025</summary>
                 <div class="secondary-text">
                     <br>
 
                     <!-- May 11th 2025 -->
                     <p><strong>May 11th 2025</strong></p>
-                    <p><strong>Reading</strong>: <a class="secondary-link" target="_blank"
+                    <p>Reading: <a class="secondary-link" target="_blank"
                             href="https://pair.withgoogle.com/explorables/patchscopes/">Can Large Language Models
                             Explain Their
                             Internal Mechanisms?</a> by Hussein, Nada, et al.</p>
-                    <p><strong>Listening to</strong>: <a class="secondary-link" target="_blank"
+                    <p>Listening to: <a class="secondary-link" target="_blank"
                             href="https://open.spotify.com/album/6tmZryIk5pXCueWH5Fm0pt?si=XwOiAQSYQ1Gx_Pt_aEL3lQ">弓长张</a>
                         by
                         jackzebra, <a class="secondary-link" target="_blank"
@@ -86,17 +86,17 @@
                             href="https://open.spotify.com/album/57msisvMU9bweGU7ITMnvl?si=bzNAYhidRAaNe2YBJz_LlA">Trendsetter</a>
                         by
                         Lunaa</p>
-                    <p><strong>Watching</strong>: <a class="secondary-link" target="_blank"
+                    <p>Watching: <a class="secondary-link" target="_blank"
                             href="https://youtu.be/tsbCSkvHhMo?si=TAiMOtZw-q8Jfrbn">Quantum Computing Course – Math and Theory for Beginners</a> from freeCodeCamp</p>  
                     <br>
 
                     <!-- April 14th 2025 -->
                     <p><strong>April 14th 2025</strong></p>
-                    <p><strong>Reading</strong>: <a class="secondary-link" target="_blank"
+                    <p>Reading: <a class="secondary-link" target="_blank"
                             href="https://arxiv.org/pdf/2504.01990">Advances and Challenges in Foundation Agents</a> by
                         Liu,
                         Bang, et al.</p>
-                    <p><strong>Listening to</strong>: <a class="secondary-link" target="_blank"
+                    <p>Listening to: <a class="secondary-link" target="_blank"
                             href="https://open.spotify.com/album/7ikTrq7WTdtgLtphwS5S0v?si=vu1-iTPUScu3UCgplGoaEw">Grove</a>
                         by
                         Dion, <a class="secondary-link" target="_blank"
@@ -105,7 +105,7 @@
                         Ichiko Aoba, <a class="secondary-link" target="_blank"
                             href="https://open.spotify.com/album/784znju28Nz5zSuRuthPcO?si=-1WY38P5TSa_PB-MqtzWkQ">F*CK
                             U SKRILLEX</a> by Skrillex</p>
-                    <p><strong>Watching</strong>: The <a class="secondary-link" target="_blank"
+                    <p>Watching: The <a class="secondary-link" target="_blank"
                             href="https://youtu.be/k2LEJb9OMNo?si=RJiBlJHAO35xfapM">Ottawa Senators</a> in the Stanely
                         Cup playoffs</p>
                     <br>
