--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.barnesandnoble.com/w/within-a-budding-grove-marcel-proust/1102545295?ean=9781504065467">Within a Budding Grove</a> by Marcel Proust</p>
+                    href="https://www.scottaaronson.com/papers/philos.pdf">Why Philosophers Should Care About Computational Complexity</a> by Scott Aaronson</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/2qwv7hNjSGfLarHY2adeq9?si=GbpiiE8qTPepty5N0ZtkcQ">14
