--- a/ontology/imessage-ui-collages.html
+++ b/ontology/imessage-ui-collages.html
@@ -28,7 +28,7 @@
 <body>
     <div class="container">
         <div class="left">
-            <h1><a href="../index.html" class="home-link">Gregory Cotton</a></h1>
+            <h1><a href="/" class="home-link">Gregory Cotton</a></h1>
         </div>
 
         <div class="right">
