Homepage and typo fix

--- a/fieldnotes/japans-jazz-kissas.html
+++ b/fieldnotes/japans-jazz-kissas.html
@@ -170,7 +170,7 @@
                     albums we liked by scrolling Spotify, and he asked the bar to play Stan Getz's Quartets for me.</p>
 
                 <p>He left at around 23:00, and I left shortly after, only to find he had very generously paid for
-                    practically my whole tab – everything but the two drinks I had had before him. I left, got no the
+                    practically my whole tab – everything but the two drinks I had had before him. I left, got on the
                     subway, rode one stop, before realizing I had forgotten the drawing he had made. I rushed back, and
                     the bartender had saved it, as she believed I may come back for it (very kind). I got a huge bowl of
                     ramen from a nearby shop before heading home.</p>
