--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://rezarezvan.com/blog/rezvan_explains/">Classical Machine Learning </a> by Reza Rezvan</p>
+                    href="https://www.barnesandnoble.com/w/the-wind-up-bird-chronicle-haruki-murakami/1100619480?ean=9780679775430">The Wind-Up Bird Chronicle</a> by Haruki Murakami</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/2lPI6LkysvnK2wNPY993Un?si=fZOuLplxRgyidhOCBZydZg">Tokyo Concert</a> by
                 Bill Evans, <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/2iEkTSOFHFowNwnCJzbCP4?si=J5EbtO79RUSaTLCR2aq6qA">Sapporo Concert</a> by Eiji Kitamura, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/3afGgL2rBWMuLYEWXScDFb?si=Us607TPHRD-PQFh0qGzrjw">Raconte-moi...</a>
-                by Stacey Kent</p>
+                    href="https://open.spotify.com/album/7mOrnQqDad3RgYQsJGaaqk?si=_6dxfuYCS6WqVXdC6ZUsbQ">Heavy Metal</a>
+                by Cameron Winter</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.youtube.com/playlist?list=PLbgaMIhjbmEnaH_LTkxLI7FMa2HsnawM_">Category theory</a> lecture series from Bartosz Milewski</p>
+                    href="https://youtu.be/p1FF3r6raSc?si=NYl1prJeunKT4j81"> The Hard-Won Wisdom of Yung Lean</a> from NYT Popcast</p>
 
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated September 28th 2025</summary>
+                <summary class="secondary-link">Last updated November 7th 2025</summary>
                 <div class="secondary-text">
                     <br>
 
