--- a/ontology/knot.html
+++ b/ontology/knot.html
@@ -13,7 +13,7 @@
         content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Simulator | Gregory Cotton</title>
+    <title>Knot | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="right">
-            <h2>Forest Simulator</h2>
+            <h2>Knot</h2>
 
             <br>
 
@@ -44,9 +44,11 @@
             </details>
 
             <div class="proj-txt-container">
-                <p>Scenes to meditate to, inspired by my walks in the Ottawa Greenbelt.</p>
-                
-                <p><s>Visit the forest at <a href="https://forest.gregorycotton.ca" target="_blank" class="primary-link">forest.gregorycotton.ca</a>.</s></p>
+                <p>Knot is my client-server TUI for running LLMs locally. It allows me to install models to run locally,
+                    search/retrieve past conversations, swap models, load files into chat context (and more) from within
+                    my terminal. As its a tool I actively use, I'm making frequent (ish) changes to it to suit my needs;
+                    you can see what I've been working on in the <a class="primary-link" target="_blank"
+                        href="https://github.com/gregorycotton/knot">Knot GitHub repo</a>.</p>
             </div>
 
             <br>
@@ -65,13 +67,13 @@
                         <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
-                                    <img src="thumbnails/forest-simulator/forest-simulator-thumbnail.jpg" alt="Forest Simulator thumbnail"
+                                    <img src="thumbnails/knot/knot-thumbnail.jpg" alt="Knot thumbnail"
                                         class="thumbnail-img">
                                 </td>
-                                <td>Forest Simulator example</td>
-                                <td id="fileSize-forest-simulator">Loading...</td>
-                                <td class="loadImageTrigger" data-fullimageurl="images/forest-simulator/forest-simulator.jpg"
-                                    data-title="Forest Simulator"><a class="table-link">Load image</a></td>
+                                <td>Knot</td>
+                                <td id="fileSize-knot">Loading...</td>
+                                <td class="loadImageTrigger" data-fullimageurl="images/knot/knot.jpg" data-title="Knot">
+                                    <a class="table-link">Load image</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -95,11 +97,12 @@
     <script>
         const imageConfigurations = [
             {
-                idForFileSizeCell: 'fileSize-forest-simulator',
-                fullImageUrl: 'images/forest-simulator/forest-simulator.jpg'
+                idForFileSizeCell: 'fileSize-knot',
+                fullImageUrl: 'images/knot/knot.jpg'
             }
         ];
     </script>
+
 </body>
 
 </html>
