--- a/index.html
+++ b/index.html
@@ -239,14 +239,13 @@
     <div id="imageOverlay" class="image-overlay hidden" onclick="hideImagePopup()"></div>
     <img id="popupImage" class="popup-image hidden" onclick="hideImagePopup()">
 
-    <footer>
-        <div class="footer-left">Gregory Cotton, 2025</div>
-        <div class="footer-right">
-            <a href="https://www.linkedin.com/in/gregorycotton/" target="_blank" class="secondary-link">LinkedIn</a> |
-            <a href="https://www.are.na/gregory-cotton/" target="_blank" class="secondary-link">Are.na</a> | <a
-                href="https://open.spotify.com/user/greg.a.c?si=2bd247bf3bf5481f" target="_blank"
-                class="secondary-link">Spotify</a>
-        </div>
+    <script>
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML('beforeend', data);
+            });
+    </script>
     </footer>
 </body>
 
