--- a/changelog.html
+++ b/changelog.html
@@ -42,7 +42,7 @@
             <ul style="list-style-position: inside">
                 <li>Stateful URLs for queries on tables</li>
                 <li>FTS5 for database search</li>
-                <li>Mobile responsivenes for ontology page details</li>
+                <li>More efficient means of generating new pages</li>
             </ul>
 
             <br>
@@ -65,75 +65,9 @@
                         </tr>
 
                         <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>07/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/5363085cae0a151351377653ef2e0bca0d366f52">5363085</a></td>
-                        </tr>
-
-                        <tr>
                             <td>hori scroll for metadata</td>
                             <td>06/12/2025</td>
                             <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/f006aa4ba818bd00cc4bbe999483afc53e53eb49">f006aa4</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>knot++</td>
-                            <td>06/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/12bd73f538071edbf33ed1ab1aef5edcb026792d">12bd73f</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>07/11/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/0461f8941a2c905bdbd322cf1b040064a8db1d18">0461f89</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>server update</td>
-                            <td>01/10/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/78ac77b3613ab8e3cae0efa979d082150194a23f">78ac77b</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Remove</td>
-                            <td>01/10/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/e9c00e99418ed8cb89bdc444220ea0ba1453d2cd">e9c00e9</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Pages added</td>
-                            <td>01/10/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/e75f0700ec8e5f0ebd862da7c174207c8b5850d5">e75f070</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>18/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/7eebca0c1d183d4038b74650487ebda206a733de">7eebca0</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>18/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/8de1e2731ac6ea89d434aaad78bd5edbe9b6b49e">8de1e27</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>12/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/81643dedcd3412e01fc6d1818db771c000230223">81643de</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>10/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/d55919b383aa07c44350287592f1b21b197ef318">d55919b</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>06/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/e7629973871a49f69f20de713753e828f57ad487">e762997</a></td>
                         </tr>
 
                         <tr>
