--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.barnesandnoble.com/w/the-wind-up-bird-chronicle-haruki-murakami/1100619480?ean=9780679775430">The Wind-Up Bird Chronicle</a> by Haruki Murakami</p>
+                    href="https://www.math.unm.edu/~crisp/courses/math401/tao.pdf">Real Analysis</a> by Terence Tao</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/2lPI6LkysvnK2wNPY993Un?si=fZOuLplxRgyidhOCBZydZg">Tokyo Concert</a> by
