--- a/ontology/tokyo.html
+++ b/ontology/tokyo.html
@@ -80,7 +80,7 @@
                                 <td>DUG</td>
                                 <td id="fileSize-dug">Loading...</td>
                                 <td class="loadImageTrigger"
-                                    data-fullimageurl="images/tokyo/DUG.jpg"
+                                    data-fullimageurl="images/tokyo/dug.jpg"
                                     data-title="DUG"><a class="table-link">Load image</a></td>
                             </tr>
                             <tr>
