--- a/changelog.html
+++ b/changelog.html
@@ -120,7 +120,7 @@
     </div>
 
     <script>
-        fetch('footer.html')
+        fetch('../footer.html')
             .then(response => response.text())
             .then(data => {
                 document.body.insertAdjacentHTML('beforeend', data);
