style: header, typos, index

--- a/fieldnotes/motivating-this-site.html
+++ b/fieldnotes/motivating-this-site.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Blog post from Greg, explaining the rationale behind the design decisions made during the creation of this website.">
 
+    <meta property="og:title" content="Motivating this site | Gregory Cotton">
+    <meta property="og:description" content="Blog post from Greg, explaining the rationale behind the design decisions made during the creation of this website.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Motivating this site | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Motivating this site | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
