--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Homepage of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
 
+    <meta property="og:title" content="Gregory Cotton">
+    <meta property="og:description" content="Homepage of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Gregory Cotton</title>
     <link rel="stylesheet" href="style.css">
 
@@ -49,24 +54,43 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.math.unm.edu/~crisp/courses/math401/tao.pdf">Real Analysis</a> by Terence Tao</p>
+                    href="https://www.goodreads.com/book/show/298275.Nausea">Nausea</a> by Jean-Paul Sartre</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/2lPI6LkysvnK2wNPY993Un?si=fZOuLplxRgyidhOCBZydZg">Tokyo Concert</a> by
-                Bill Evans, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/2iEkTSOFHFowNwnCJzbCP4?si=J5EbtO79RUSaTLCR2aq6qA">Sapporo Concert</a> by Eiji Kitamura, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/7mOrnQqDad3RgYQsJGaaqk?si=_6dxfuYCS6WqVXdC6ZUsbQ">Heavy Metal</a>
-                by Cameron Winter</p>
+                    href="https://open.spotify.com/album/3rtHKkpPLmiwHNiHA0Kr3d?si=PIKRU9-3RH6k59M0EE5GDw">FLYING BEAGLE</a> by
+                Himiko Kikuchi, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/0Ydakb7npXmyTwFLvKc5qt?si=kcbPQd9nSmWgoqlZf0mk1Q">Ballads</a> by John Coltrane, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/4ntjTCmyhwHIsK12RScxRP?si=EqvEQl8GRomU_VonHaYbZg">Bossa Nova Soul Samba</a>
+                by Ike Quebec</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://youtu.be/p1FF3r6raSc?si=NYl1prJeunKT4j81"> The Hard-Won Wisdom of Yung Lean</a> from NYT Popcast</p>
+                    href="https://a24films.com/films/marty-supreme"> Marty Supreme</a> from
+                A24</p>
 
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated December 7th 2025</summary>
+                <summary class="secondary-link">Last updated December 30th 2025</summary>
                 <div class="secondary-text">
                     <br>
+                    <!-- December 7th 2025 -->
+                    <p><strong>Reading</strong>: <a class="secondary-link" target="_blank"
+                            href="https://www.math.unm.edu/~crisp/courses/math401/tao.pdf">Real Analysis</a> by Terence
+                        Tao</p>
+
+                    <p><strong>Listening to</strong>: <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/2lPI6LkysvnK2wNPY993Un?si=fZOuLplxRgyidhOCBZydZg">Tokyo
+                            Concert</a> by
+                        Bill Evans, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/2iEkTSOFHFowNwnCJzbCP4?si=J5EbtO79RUSaTLCR2aq6qA">Sapporo
+                            Concert</a> by Eiji Kitamura, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/7mOrnQqDad3RgYQsJGaaqk?si=_6dxfuYCS6WqVXdC6ZUsbQ">Heavy
+                            Metal</a>
+                        by Cameron Winter</p>
+
+                    <p><strong>Watching</strong>: <a class="secondary-link" target="_blank"
+                            href="https://youtu.be/p1FF3r6raSc?si=NYl1prJeunKT4j81"> The Hard-Won Wisdom of Yung
+                            Lean</a> from NYT Popcast</p>
 
                     <!-- July 12th 2025 -->
                     <p><strong>July 12th 2025</strong></p>
