--- a/ontology/bay-area-climate-change-council.html
+++ b/ontology/bay-area-climate-change-council.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's work as a graphic designer for the Bay Area Climate Change Council, in which design resources, assets, and icons were produced.">
 
+    <meta property="og:title" content="Bay Area Climate Change Council | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's work as a graphic designer for the Bay Area Climate Change Council, in which design resources, assets, and icons were produced.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Bay Area Climate Change Council | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Bay Area Climate Change Council | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
