--- a/changelog.html
+++ b/changelog.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Changelog for Gregory Cotton's website, documenting recent updates as well as a TODO list.">
 
+    <meta property="og:title" content="Changelog | Gregory Cotton">
+    <meta property="og:description" content="Changelog for Gregory Cotton's website, documenting recent updates as well as a TODO list.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Changelog | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Changelog | Gregory Cotton</title>
     <link rel="stylesheet" href="style.css">
 
