--- a/fieldnotes/hello-world.html
+++ b/fieldnotes/hello-world.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Hello, world!">
 
+    <meta property="og:title" content="Hello world | Gregory Cotton">
+    <meta property="og:description" content="Hello, world!">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Hello world | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello wolrd | Gregory Cotton</title>
+
+    <title>Hello world | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
