--- a/fieldnotes/japans-jazz-kissas.html
+++ b/fieldnotes/japans-jazz-kissas.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Blog post from Greg, documenting his visits to Jazz bars (kissas) across Tokyo and Kyoto.">
 
+    <meta property="og:title" content="Japan's jazz kissas | Gregory Cotton">
+    <meta property="og:description" content="Blog post from Greg, documenting his visits to Jazz bars (kissas) across Tokyo and Kyoto.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Japan's jazz kissas | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Japan's jazz kissas | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
