--- a/ontology/01-02-2024-29-02-2024.html
+++ b/ontology/01-02-2024-29-02-2024.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's reporting of every advertisement in Febraury 2024 that he saw online.">
 
+    <meta property="og:title" content="01.02.2024 – 29-02-2024 | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's reporting of every advertisement in Febraury 2024 that he saw online.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="01.02.2024 – 29-02-2024 | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>01.02.2024 – 29-02-2024 | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
