--- a/ontology/assorted-collaborative-paintings.html
+++ b/ontology/assorted-collaborative-paintings.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg, Toby, Emanuelle, Sabina, and Mihail's 'Assorted collaborative paintings', with watercolour and Chinese calligraphy.">
 
+    <meta property="og:title" content="Assorted collaborative paintings | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg, Toby, Emanuelle, Sabina, and Mihail's 'Assorted collaborative paintings', with watercolour and Chinese calligraphy.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Assorted collaborative paintings | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Assorted collaborative paintings | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
