--- a/ontology/assorted-surrealist-photography.html
+++ b/ontology/assorted-surrealist-photography.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's 'Assorted surrealist photography', a collection of photography from 2016 through 2018.">
 
+    <meta property="og:title" content="Assorted surrealist photography | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's 'Assorted surrealist photography', a collection of photography from 2016 through 2018.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Assorted surrealist photography | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Assorted surrealist photography | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
