--- a/ontology/dscn7847-dscn8596.html
+++ b/ontology/dscn7847-dscn8596.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's 'DSCN7847 – DSCN8596', a video documenting a Christmas and NYE trip through Belgium, Germany, and Czechia with Matt, Evan, Michael, Emanuelle, and other friends.">
 
+    <meta property="og:title" content="DSCN7847 – DSCN8596 | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's 'DSCN7847 – DSCN8596', a video documenting a Christmas and NYE trip through Belgium, Germany, and Czechia with Matt, Evan, Michael, Emanuelle, and other friends.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="DSCN7847 – DSCN8596 | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>DSCN7847 – DSCN8596 | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
