--- a/ontology/file-name-narrative.html
+++ b/ontology/file-name-narrative.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's abstract short film(s) 'File name narrative', in which videos from YouTube are connected to form a film who's progression is driven not by conventional narrative, but by file names.">
 
+    <meta property="og:title" content="File name narrative | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's abstract short film(s) 'File name narrative', in which videos from YouTube are connected to form a film who's progression is driven not by conventional narrative, but by file names.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="File name narrative | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>File name narrative | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
