--- a/ontology/gosimgo.html
+++ b/ontology/gosimgo.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's photography work capturing promotional material for the 'GoSimGo Flight Simulator' in Gatineau.">
 
+    <meta property="og:title" content="GoSimGo Flight Simulator | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's photography work capturing promotional material for the 'GoSimGo Flight Simulator' in Gatineau.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="GoSimGo Flight Simulator | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>GoSimGo Flight Simulator | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
