--- a/ontology/kanazawa.html
+++ b/ontology/kanazawa.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Gregory Cotton's 'Kanazawa (DSCF1074 – DSCF1138)', a series of images taken in Kanazawa, 2025.">
 
+    <meta property="og:title" content="Kanazawa (DSCF1074 – DSCF1138) | Gregory Cotton">
+    <meta property="og:description" content="Project page for Gregory Cotton's 'Kanazawa (DSCF1074 – DSCF1138)', a series of images taken in Kanazawa, 2025.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="Kanazawa (DSCF1074 – DSCF1138) | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Kanazawa (DSCF1074 – DSCF1138) | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
