--- a/ontology/piano-export-2024-09-25-29.html
+++ b/ontology/piano-export-2024-09-25-29.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's generative music, 'piano export . 2024 09 25–29'.">
 
+    <meta property="og:title" content="piano export . 2024 09 25–29 | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's generative music, 'piano export . 2024 09 25–29'.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="piano export . 2024 09 25–29 | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>piano export . 2024 09 25–29 | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
