--- a/ontology/the-beginning-end-of-something.html
+++ b/ontology/the-beginning-end-of-something.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's video reflection on moving from Ottawa to Lisbon, titled 'the beginning/end of something.'.">
 
+    <meta property="og:title" content="the beginning/end of something. | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's video reflection on moving from Ottawa to Lisbon, titled 'the beginning/end of something.'.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="the beginning/end of something. | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>the beginning/end of something. | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
