--- a/ontology/the-open-house.html
+++ b/ontology/the-open-house.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for 'The Open House', hosted by Hershel, with art and support from Greg, Sam and Daniel.">
 
+    <meta property="og:title" content="The Open House | Gregory Cotton">
+    <meta property="og:description" content="Project page for 'The Open House', hosted by Hershel, with art and support from Greg, Sam and Daniel.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="The Open House | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>The Open House | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
