--- a/ontology/to-stay-at-home.html
+++ b/ontology/to-stay-at-home.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
 
     <meta name="title" content="Gregory Cotton">
-    <meta property="og:title" content="Gregory Cotton">
-    <meta name="twitter:title" content="Gregory Cotton">
-    <meta name="creator" content="gregorycotton.ca">
-    <meta name="author" content="Gregory Cotton">
     <meta name="description"
-        content="Website of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+        content="Project page for Greg's collaboration with Adam of To Stay At Home, in which album art, promotional materials, and Spotify canvas was produced.">
 
+    <meta property="og:title" content="To Stay At Home | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's collaboration with Adam of To Stay At Home, in which album art, promotional materials, and Spotify canvas was produced.">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:title" content="To Stay At Home | Gregory Cotton">
+    
+    <meta name="author" content="Gregory Cotton">
+    <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>To Stay At Home | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
